fixed sucess position & buttons min widht on mobile

--- a/src/global-styles/_shared.scss
+++ b/src/global-styles/_shared.scss
@@ -28,4 +28,7 @@
   @include media('<=560px') {
     min-width: 100px;
   }
+  @include media('<=phone') {
+    min-width: 80px;
+  }
 }
